Started asignemnt two by using pandas to read from both excellsheets to create dataframes. then ive created dataframes by slicing those and creating a dataframe for only 'läsår'

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,24 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt\n",
+    "from plotly import express as px\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Store Dataframe by reading from  2023_åk9_np.xlsx and add them to a list"
+    "##### Store Dataframes by reading from  2023_åk9_np.xlsx and add them to a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
     "    \n",
     "\n",
     "    #print(dataframe.info()) # printing info for testing purposes\n",
-    "print(df_sfi) # Realise SFI has dirty data dont see any real way to clean it. rebating wether to remove or set to 0\n",
+    "print(df_sfi) # Realise SFI has dirty data dont see any real way to clean it. debating wether to remove or set to 0\n",
     "df_sfi.iloc[3,2:] = 0 #Decided to set to  0 ludvig reminded me that i can use iloc\n",
     "\n",
     "    "
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,11 +160,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Asignment 2:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Store Dataframes by reading from  betyg_o_prov_riksnivå.xlsx and add them to a list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Läsår     5 non-null      object \n",
+      " 1   Totalt    5 non-null      float64\n",
+      " 2   Flickor   5 non-null      float64\n",
+      " 3   Pojkar    5 non-null      float64\n",
+      " 4   Totalt2   5 non-null      object \n",
+      " 5   Flickor2  5 non-null      object \n",
+      " 6   Pojkar2   5 non-null      object \n",
+      " 7   Totalt3   5 non-null      object \n",
+      " 8   Flickor3  5 non-null      object \n",
+      " 9   Pojkar3   5 non-null      object \n",
+      "dtypes: float64(3), object(7)\n",
+      "memory usage: 532.0+ bytes\n",
+      "     Läsår  Totalt  Flickor  Pojkar  Totalt2  Flickor2  Pojkar2  Totalt3  \\\n",
+      "0  2018/19   221.7    234.3   209.8    229.8     243.3    217.0     24.5   \n",
+      "1  2019/20   222.9    235.7   210.9    231.1     244.9    218.2     23.9   \n",
+      "2  2020/21   223.9    235.4   212.9    232.1     244.4    220.3     23.9   \n",
+      "3  2021/22   221.2    231.6   211.4    229.2     240.3    218.8     25.9   \n",
+      "4  2022/23   220.6    229.7   211.9    228.5     238.2    219.3     26.8   \n",
+      "\n",
+      "   Flickor3  Pojkar3  \n",
+      "0      21.7     27.2  \n",
+      "1      21.4     26.3  \n",
+      "2      21.9     25.9  \n",
+      "3      24.2     27.5  \n",
+      "4      25.5     28.0  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'px.line(df_table_a_years,\\n        x=\"Läsår\",\\n        y=\"Totalt\")'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_table_a = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1A\",header=9)\n",
+    "df_table_b = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1B\",header=7)\n",
+    "df_table_a.head(10)\n",
+    "df_table_a_years = df_table_a[0:5]\n",
+    "df_table_b_years = df_table_b[0:5]\n",
+    "df_table_a_years.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]\n",
+    "df_table_b_years.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]\n",
+    "\n",
+    "\n",
+    "px.line(df_table_b_years,\n",
+    "        x=\"Läsår\",\n",
+    "        y=\"Totalt\")"
+   ]
   }
  ],
  "metadata": {
