--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -122,12 +122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### PlotBuilding"
+    "### Plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -170,12 +170,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Store Dataframes by reading from  betyg_o_prov_riksnivå.xlsx and add them to a list"
+    "##### Store Dataframes by reading from  betyg_o_prov_riksnivå.xlsx "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "                                                                                               \n",
+    "# Reading the excelsheets\n",
+    "df_table_b = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1B\",header=7)    \n",
+    "# Renaming columns for easier access    \n",
+    "df_table_b.columns = [\"Category\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]\n",
+    "# Extracting only the by year data\n",
+    "df_table_b_years = df_table_b[0:5] \n",
+    "\n",
+    "\n",
+    "df_not_passed_year = df_table_b_years[[\"Category\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]]         #Creating a dataframe with only the data regarding the % of people who have a failing grade\n",
+    "df_not_passed_year.columns = [\"Category\",\"Totalt\",\"Flickor\",\"Pojkar\"]      # Renaming the columns so i dont have to add any labels\n",
+    "df_merit_value_year_16 = df_table_b_years[[\"Category\",\"Totalt\",\"Flickor\",\"Pojkar\"]]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +222,7 @@
        },
        "data": [
         {
-         "hovertemplate": "variable=Pojkar<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Pojkar<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Pojkar",
          "line": {
           "color": "#636efa",
@@ -215,7 +251,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Flickor<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Flickor<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Flickor",
          "line": {
           "color": "#EF553B",
@@ -244,7 +280,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Totalt<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Totalt<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Totalt",
          "line": {
           "color": "#00cc96",
@@ -1084,7 +1120,38 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Plotting the  missing grade graph\n",
+    "fig =   px.line(df_not_passed_year,\n",
+    "        x=\"Category\",\n",
+    "        y=[\"Pojkar\",\"Flickor\",\"Totalt\"],\n",
+    "        title= \"Elever med minst ett icke godkänt betyg\",\n",
+    "        )\n",
+    "fig.update_layout(\n",
+    "    xaxis_title = \"Läsår (Årskurs)\",\n",
+    "    yaxis_title = \"Andel av elever (%)\",\n",
+    ")\n",
+    "\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -1093,7 +1160,7 @@
        },
        "data": [
         {
-         "hovertemplate": "variable=Pojkar<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Pojkar<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Pojkar",
          "line": {
           "color": "#636efa",
@@ -1122,7 +1189,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Flickor<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Flickor<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Flickor",
          "line": {
           "color": "#EF553B",
@@ -1151,7 +1218,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "variable=Totalt<br>Läsår=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Totalt<br>Category=%{x}<br>value=%{y}<extra></extra>",
          "legendgroup": "Totalt",
          "line": {
           "color": "#00cc96",
@@ -1973,7 +2040,7 @@
           1
          ],
          "title": {
-          "text": "Elevtyp"
+          "text": "Läsår"
          }
         },
         "yaxis": {
@@ -1991,67 +2058,84 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'df_table_a = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1A\",header=9)\\ndf_table_a_years = df_table_a[0:5]\\ndf_table_a_years.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "                                                                                               \n",
-    "# Reading the excelsheets\n",
-    "df_table_b = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1B\",header=7)        \n",
-    "\n",
-    " # Extracting only the by year data\n",
-    "df_table_b_years = df_table_b[0:5] \n",
-    "\n",
-    " # Renaming columns for easier access\n",
-    "df_table_b_years.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]\n",
-    "\n",
-    "df_not_passed_year = df_table_b_years[[\"Läsår\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]]         #Creating a dataframe with only the data regarding the % of people who have a failing grade\n",
-    "df_not_passed_year.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\"]      # Renaming the columns so i dont have to add any labels\n",
-    "df_merit_value_16 = df_table_b_years[[\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\"]]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Plotting the  missing grade graph\n",
-    "fig =   px.line(df_not_passed_year,\n",
-    "        x=\"Läsår\",\n",
-    "        y=[\"Pojkar\",\"Flickor\",\"Totalt\"],\n",
-    "        title= \"Elever med minst ett icke godkänt betyg\",\n",
-    "        )\n",
-    "fig.update_layout(\n",
-    "    xaxis_title = \"Läsår (Årskurs)\",\n",
-    "    yaxis_title = \"Andel av elever (%)\",\n",
-    ")\n",
-    "\n",
-    "fig.show()\n",
     "\n",
     "# Plotting the merit value 16 graph\n",
     "fig2 =   px.line(df_merit_value_16,\n",
-    "        x=\"Läsår\",\n",
+    "        x=\"Category\",\n",
     "        y=[\"Pojkar\",\"Flickor\",\"Totalt\"],\n",
     "        title= \"Genomsnittligt meritvärde beräknat på 16 ämnen\",\n",
     "        )\n",
     "fig2.update_layout(\n",
-    "    xaxis_title = \"Elevtyp\",\n",
+    "    xaxis_title = \"Läsår\",\n",
     "    yaxis_title = \"Genimsnittligt meritvärde\",\n",
     ")\n",
     "\n",
-    "fig2.show()\n",
+    "fig2.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing to html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "fig.write_html(\"visualiseringar/students_with_failing_grade.html\")  # A)\n",
+    "fig2.write_html(\"visualiseringar/average_merit_value_16.html\")  # B)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring interesting data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Category  Totalt  Flickor  Pojkar  Totalt2  Flickor2  Pojkar2  Totalt3  \\\n",
+      "6   Kommun   216.1    225.6   207.2    223.6     233.8    214.1     28.9   \n",
+      "7  Enskild   237.9    245.0   230.8    247.2     254.8    239.7     18.7   \n",
+      "\n",
+      "   Flickor3  Pojkar3  \n",
+      "6      27.4     30.3  \n",
+      "7      18.4     19.0  \n",
+      "                     Category  Totalt  Flickor  Pojkar  Totalt2  Flickor2  \\\n",
+      "22    Förgymnasial utbildning   163.8    172.2   155.8    166.8     175.6   \n",
+      "23       Gymnasial utbildning   197.4    207.2   188.2    203.2     213.6   \n",
+      "24  Eftergymnasial utbildning   239.1    247.9   230.7    248.6     258.1   \n",
+      "\n",
+      "    Pojkar2  Totalt3  Flickor3  Pojkar3  \n",
+      "22    158.3     63.5      61.5     65.3  \n",
+      "23    193.3     37.4      35.2     39.5  \n",
+      "24    239.6     16.8      16.1     17.5  \n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "\n",
-    "\"\"\"df_table_a = pd.read_excel(\"betyg_o_prov_riksnivå.xlsx\",sheet_name=\"Tabell 1A\",header=9)\n",
-    "df_table_a_years = df_table_a[0:5]\n",
-    "df_table_a_years.columns = [\"Läsår\",\"Totalt\",\"Flickor\",\"Pojkar\",\"Totalt2\",\"Flickor2\",\"Pojkar2\",\"Totalt3\",\"Flickor3\",\"Pojkar3\"]\"\"\""
+    "df_parents = df_table_b[22:25] # Föräldrars utbildnings påverkan på elevers skollycka\n",
+    "df_school_type = df_table_b[6:8]\n",
+    "print(df_school_type)\n",
+    "print(df_parents)"
    ]
   },
   {
