Finnished data storytelling for bonus question. just finnishing touches left aswell as writing to files

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +109,6 @@
     "        \"Flickor(poäng)\",\n",
     "        \"Pojkar(poäng)\",\n",
     "    ]\n",
-    "    \n",
-    "\n",
     "    #print(dataframe.info()) # printing info for testing purposes\n",
     "print(df_sfi) # Realise SFI has dirty data dont see any real way to clean it. debating wether to remove or set to 0\n",
     "df_sfi.iloc[3,2:] = 0 #Decided to set to  0 ludvig reminded me that i can use iloc\n",
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -236,22 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Created a method that returns a figure\n",
     "def CreateLineFigure(dataframe,x,y,title,xlabel,ylabel):\n",
-    "    # Plotting the  missing grade graph\n",
-    "    fig =   px.line(dataframe,\n",
+    "    fig = px.line(dataframe,\n",
     "            x=x,\n",
     "            y=y,\n",
     "            title=title\n",
-    "            )\n",
+    "        )\n",
     "    fig.update_layout(\n",
     "        xaxis_title = xlabel,\n",
     "        yaxis_title = ylabel\n",
-    "    )\n",
+    "        )\n",
     "    return fig"
    ]
   },
@@ -264,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1222,7 @@
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "MzMzMzMzO0DNzMzMzEw6QGZmZmZm5jlAAAAAAACAO0AAAAAAAAA8QA==",
+          "bdata": "mpmZmZk5akDNzMzMzFxqQM3MzMzMnGpAzczMzMxsakDNzMzMzHxqQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -1254,7 +1251,7 @@
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "MzMzMzOzNUBmZmZmZmY1QGZmZmZm5jVAMzMzMzMzOEAAAAAAAIA5QA==",
+          "bdata": "mpmZmZlJbUBmZmZmZnZtQM3MzMzMbG1AMzMzMzPzbEBmZmZmZrZsQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -1283,7 +1280,7 @@
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "AAAAAACAOEBmZmZmZuY3QGZmZmZm5jdAZmZmZmbmOUDNzMzMzMw6QA==",
+          "bdata": "ZmZmZma2a0DNzMzMzNxrQM3MzMzM/GtAZmZmZmama0AzMzMzM5NrQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -2104,8 +2101,8 @@
    ],
    "source": [
     "# Plotting the merit value 16 graph\n",
-    "figure_to_display = CreateLineFigure(df_not_passed_year,\"Category\",[\"Pojkar\",\"Flickor\",\"Totalt\"],\"Genomsnittligt meritvärde beräknat på 16 ämnen\",\"Läsår (Årskurs)\",\"Genimsnittligt meritvärde\")\n",
-    "figure_to_display.show()\n"
+    "figure_merit_value_year_16 = CreateLineFigure(df_merit_value_year_16,\"Category\",[\"Pojkar\",\"Flickor\",\"Totalt\"],\"Genomsnittligt meritvärde beräknat på 16 ämnen\",\"Läsår (Årskurs)\",\"Genimsnittligt meritvärde\")\n",
+    "figure_merit_value_year_16.show()\n"
    ]
   },
   {
@@ -2117,25 +2114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Figure' object has no attribute 'write_html'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwrite_html\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mvisualiseringar/students_with_failing_grade.html\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# A)\u001b[39;00m\n\u001b[32m      2\u001b[39m fig2.write_html(\u001b[33m\"\u001b[39m\u001b[33mvisualiseringar/average_merit_value_16.html\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# B)\u001b[39;00m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Figure' object has no attribute 'write_html'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " \n",
-    "fig.write_html(\"visualiseringar/students_with_failing_grade.html\")  # A)\n",
-    "fig2.write_html(\"visualiseringar/average_merit_value_16.html\")  # B)\n",
+    "figure_not_passed_year.write_html(\"visualiseringar/students_with_failing_grade.html\")  # A)\n",
+    "figure_merit_value_year_16.write_html(\"visualiseringar/average_merit_value_16.html\")  # B)\n",
     "\n"
    ]
   },
@@ -2148,24 +2133,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    Category       Kön  Meritvärde\n",
-      "0    Förgymnasial utbildning   Totalt3        63.5\n",
-      "1       Gymnasial utbildning   Totalt3        37.4\n",
-      "2  Eftergymnasial utbildning   Totalt3        16.8\n",
-      "3    Förgymnasial utbildning   Pojkar3        65.3\n",
-      "4       Gymnasial utbildning   Pojkar3        39.5\n",
-      "5  Eftergymnasial utbildning   Pojkar3        17.5\n",
-      "6    Förgymnasial utbildning  Flickor3        61.5\n",
-      "7       Gymnasial utbildning  Flickor3        35.2\n",
-      "8  Eftergymnasial utbildning  Flickor3        16.1\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Kön</th>\n",
+       "      <th>Meritvärde</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Förgymnasial utbildning</td>\n",
+       "      <td>Totalt3</td>\n",
+       "      <td>63.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gymnasial utbildning</td>\n",
+       "      <td>Totalt3</td>\n",
+       "      <td>37.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Eftergymnasial utbildning</td>\n",
+       "      <td>Totalt3</td>\n",
+       "      <td>16.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Förgymnasial utbildning</td>\n",
+       "      <td>Pojkar3</td>\n",
+       "      <td>65.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gymnasial utbildning</td>\n",
+       "      <td>Pojkar3</td>\n",
+       "      <td>39.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Eftergymnasial utbildning</td>\n",
+       "      <td>Pojkar3</td>\n",
+       "      <td>17.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Förgymnasial utbildning</td>\n",
+       "      <td>Flickor3</td>\n",
+       "      <td>61.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Gymnasial utbildning</td>\n",
+       "      <td>Flickor3</td>\n",
+       "      <td>35.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Eftergymnasial utbildning</td>\n",
+       "      <td>Flickor3</td>\n",
+       "      <td>16.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Category       Kön  Meritvärde\n",
+       "0    Förgymnasial utbildning   Totalt3        63.5\n",
+       "1       Gymnasial utbildning   Totalt3        37.4\n",
+       "2  Eftergymnasial utbildning   Totalt3        16.8\n",
+       "3    Förgymnasial utbildning   Pojkar3        65.3\n",
+       "4       Gymnasial utbildning   Pojkar3        39.5\n",
+       "5  Eftergymnasial utbildning   Pojkar3        17.5\n",
+       "6    Förgymnasial utbildning  Flickor3        61.5\n",
+       "7       Gymnasial utbildning  Flickor3        35.2\n",
+       "8  Eftergymnasial utbildning  Flickor3        16.1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2195,7 +2266,7 @@
     "                                var_name=\"Kön\", \n",
     "                                value_name=\"Meritvärde\")\n",
     "\n",
-    "print(df_melted_parents_missing_grade)"
+    "df_melted_parents_missing_grade"
    ]
   },
   {
@@ -2214,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3123,19 +3194,19 @@
    ],
    "source": [
     "\n",
-    "fig3 =   px.bar(df_melted_school_merit,\n",
+    "bar_fig_school_merit =   px.bar(df_melted_school_merit,\n",
     "        x=\"Category\",\n",
     "        y=\"Meritvärde\",\n",
     "        color=\"Kön\",\n",
     "        title= \"Genomsnittligt meritvärde beräknat på 16 ämnen\",\n",
     "        barmode=\"group\"\n",
     "        )\n",
-    "fig3.update_layout(\n",
+    "bar_fig_school_merit.update_layout(\n",
     "    xaxis_title = \"Skoltyp\",\n",
     "    yaxis_title = \"Genimsnittligt meritvärde\",\n",
     "    bargap =0.5\n",
     ")\n",
-    "fig3.show()"
+    "bar_fig_school_merit.show()"
    ]
   },
   {
@@ -3147,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4060,21 +4131,21 @@
    "source": [
     "\n",
     "\n",
-    "fig4 =   px.bar(df_melted_parents_merit,\n",
+    "bar_fig_parents_merit =   px.bar(df_melted_parents_merit,\n",
     "        x=\"Category\",\n",
     "        y=\"Meritvärde\",\n",
     "        color=\"Kön\",\n",
     "        title= \"Genomsnittligt meritvärde beräknat på 16 ämnen\",\n",
     "        barmode=\"group\"\n",
     "        )\n",
-    "fig4.update_layout(\n",
+    "bar_fig_parents_merit.update_layout(\n",
     "    xaxis_title = \"Föräldrars utbildningsgrad\",\n",
     "    yaxis_title = \"Genimsnittligt meritvärde\",\n",
     "    bargap =0.3\n",
     ")\n",
     "\n",
     "\n",
-    "fig4.show()"
+    "bar_fig_parents_merit.show()"
    ]
   },
   {
@@ -4086,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4113,13 +4184,12 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Förgymnasial utbildning",
-          "Gymnasial utbildning",
-          "Eftergymnasial utbildning"
+          "Kommun",
+          "Enskild"
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "AAAAAADAT0AzMzMzM7NCQM3MzMzMzDBA",
+          "bdata": "ZmZmZmbmPEAzMzMzM7MyQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -4141,13 +4211,12 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Förgymnasial utbildning",
-          "Gymnasial utbildning",
-          "Eftergymnasial utbildning"
+          "Kommun",
+          "Enskild"
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "MzMzMzNTUEAAAAAAAMBDQAAAAAAAgDFA",
+          "bdata": "zczMzMxMPkAAAAAAAAAzQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -4169,13 +4238,12 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Förgymnasial utbildning",
-          "Gymnasial utbildning",
-          "Eftergymnasial utbildning"
+          "Kommun",
+          "Enskild"
          ],
          "xaxis": "x",
          "y": {
-          "bdata": "AAAAAADATkCamZmZmZlBQJqZmZmZGTBA",
+          "bdata": "ZmZmZmZmO0BmZmZmZmYyQA==",
           "dtype": "f8"
          },
          "yaxis": "y"
@@ -4967,7 +5035,7 @@
          }
         },
         "title": {
-         "text": "Genomsnittligt meritvärde beräknat på 16 ämnen"
+         "text": "Procentuellt antal elever med minst ett icke godkänt ämne"
         },
         "xaxis": {
          "anchor": "y",
@@ -4976,7 +5044,7 @@
           1
          ],
          "title": {
-          "text": "Föräldrars utbildningsgrad"
+          "text": "Skoltyp"
          }
         },
         "yaxis": {
@@ -4986,7 +5054,7 @@
           1
          ],
          "title": {
-          "text": "Genimsnittligt meritvärde"
+          "text": "elevantal (%)"
          }
         }
        }
@@ -4997,21 +5065,21 @@
     }
    ],
    "source": [
-    "fig5 =   px.bar(df_melted_school_missing_grade,\n",
+    "bar_fig_school_missing_grade =   px.bar(df_melted_school_missing_grade,\n",
     "        x=\"Category\",\n",
     "        y=\"Meritvärde\",\n",
     "        color=\"Kön\",\n",
-    "        title= \"Genomsnittligt meritvärde beräknat på 16 ämnen\",\n",
+    "        title= \"Procentuellt antal elever med minst ett icke godkänt ämne\",\n",
     "        barmode=\"group\"\n",
     "        )\n",
-    "fig5.update_layout(\n",
-    "    xaxis_title = \"Föräldrars utbildningsgrad\",\n",
-    "    yaxis_title = \"Genimsnittligt meritvärde\",\n",
+    "bar_fig_school_missing_grade.update_layout(\n",
+    "    xaxis_title = \"Skoltyp\",\n",
+    "    yaxis_title = \"elevantal (%)\",\n",
     "    bargap =0.3\n",
     ")\n",
     "\n",
     "\n",
-    "fig5.show()"
+    "bar_fig_school_missing_grade.show()"
    ]
   },
   {
@@ -5023,7 +5091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5904,7 +5972,7 @@
          }
         },
         "title": {
-         "text": "Genomsnittligt meritvärde beräknat på 16 ämnen"
+         "text": "Procentuellt antal elever med minst ett icke godkänt ämne"
         },
         "xaxis": {
          "anchor": "y",
@@ -5923,7 +5991,7 @@
           1
          ],
          "title": {
-          "text": "Genimsnittligt meritvärde"
+          "text": "elevantal (%)"
          }
         }
        }
@@ -5934,21 +6002,32 @@
     }
    ],
    "source": [
-    "fig5 =   px.bar(df_melted_parents_missing_grade,\n",
+    "bar_fig_parents_missing_grade =   px.bar(df_melted_parents_missing_grade,\n",
     "        x=\"Category\",\n",
     "        y=\"Meritvärde\",\n",
     "        color=\"Kön\",\n",
-    "        title= \"Genomsnittligt meritvärde beräknat på 16 ämnen\",\n",
+    "        title= \"Procentuellt antal elever med minst ett icke godkänt ämne\",\n",
     "        barmode=\"group\"\n",
     "        )\n",
-    "fig5.update_layout(\n",
+    "bar_fig_parents_missing_grade.update_layout(\n",
     "    xaxis_title = \"Föräldrars utbildningsgrad\",\n",
-    "    yaxis_title = \"Genimsnittligt meritvärde\",\n",
+    "    yaxis_title = \"elevantal (%)\",\n",
     "    bargap =0.3\n",
     ")\n",
     "\n",
     "\n",
-    "fig5.show()"
+    "bar_fig_parents_missing_grade.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "#### By looking at the graphs above i conclude that :\n",
+    "\n",
+    "- Academic outcome of student have a much greater relation to parental education than wether they went to private or public school\n",
+    "- Private schools tend to pass more students (not sure wether it relates to preasure to make sure parents pick their school for their kids)"
    ]
   }
  ],
