Finalised Lab2 and wrote the barcharts to html

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
        "8  Eftergymnasial utbildning  Flickor3        16.1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3218,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -4157,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -5091,7 +5091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -6017,6 +6017,25 @@
     "\n",
     "\n",
     "bar_fig_parents_missing_grade.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writing to HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bar_fig_parents_merit.write_html(\"visualiseringar/students_merit_based_on_parental_edu.html\")\n",
+    "bar_fig_parents_missing_grade.write_html(\"visualiseringar/students_missing_grade_based_on_parental_edu.html\")\n",
+    "bar_fig_school_merit.write_html(\"visualiseringar/students_merit_based_on_schooltype.html\")\n",
+    "bar_fig_school_missing_grade.write_html(\"visualiseringar/students_missing_grade_based_on_schooltype.html\")"
    ]
   },
   {
