Added clearer inlin comments but will probably look it over again one more time before final commit

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_en = pd.read_excel(\"riket2023_åk9_np.xlsx\",header= 8,sheet_name=\"Engelska\")\n",
+    "\n",
+    "df_en = pd.read_excel(\"riket2023_åk9_np.xlsx\",header= 8,sheet_name=\"Engelska\")# Using header to skip unnecessary rows\n",
     "df_se = pd.read_excel(\"riket2023_åk9_np.xlsx\",header= 8,sheet_name=\"Svenska\")\n",
     "df_math = pd.read_excel(\"riket2023_åk9_np.xlsx\",header= 8,sheet_name=\"Matematik\")\n",
     "df_sfi = pd.read_excel(\"riket2023_åk9_np.xlsx\",header= 8,sheet_name=\"Svenska som andraspråk\")\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
     "fig,axs = plt.subplots(nrows = 1,ncols = 4, figsize= (len(df_list)*7,6)) #Creates subplots that scale with the length of the list\n",
     "color_list = [\"red\",\"blue\",\"green\",\"orange\"]\n",
     "for i in range(len(df_list)):\n",
-    "    \n",
+    "    #Changing the Ylimit to clearly display relation between the graphs\n",
     "    axs[i].set_ylim(0,20)\n",
     "    axs[i].set_xlabel(\"Huvudmän\",fontsize = 10,fontweight = \"bold\")    # Talked to ludvig and he told me how to change font when setting labels\n",
     "    axs[i].set_ylabel(\"Poäng (tot)\",fontsize = 10,fontweight = \"bold\")\n",
@@ -152,7 +153,8 @@
     "    axs[i].bar(df_list[i][\"Huvudman\"],df_list[i][\"Totalt(poäng)\"],color= color_list)\n",
     "fig.suptitle(\"Totalpoäng per huvudman för respektive ämne\",fontsize = 30,fontweight =\"bold\")\n",
     "fig.tight_layout()\n",
-    "fig.savefig(\"visualiseringar/points_per_huvudman.png\")      #Asked chatgpt how to save a fig to png and learned the savefig() method\n",
+    "# Learned savefig method from matplotlib documentation/ChatGPT for exporting plots\n",
+    "fig.savefig(\"visualiseringar/points_per_huvudman.png\")     \n",
     "\n",
     "\n"
    ]
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2114,11 +2116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
+    "# Learnt this from Debbie in a lesson\n",
     "figure_not_passed_year.write_html(\"visualiseringar/students_with_failing_grade.html\")  # A)\n",
     "figure_merit_value_year_16.write_html(\"visualiseringar/average_merit_value_16.html\")  # B)\n",
     "\n"
@@ -2133,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2236,7 @@
        "8  Eftergymnasial utbildning  Flickor3        16.1"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2246,7 @@
     "df_parents = df_table_b[22:25] # Parents educational level impact on their kids education\n",
     "df_school_type = df_table_b[6:8] # Public vs private school\n",
     "\n",
-    "# Melting the DataFrames for easier acessability when graphing\n",
+    "# Melting the DataFrames from wide to long format for easier use with Plotly\n",
     "# Meritvalue ###\n",
     "df_melted_school_merit = df_school_type.melt(id_vars=[\"Category\"], \n",
     "                                value_vars=[\"Totalt\", \"Pojkar\", \"Flickor\"], \n",
@@ -2285,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3218,7 +3220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -4157,7 +4159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -5091,7 +5093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -6028,7 +6030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
